<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/cornerRadius"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardMargin">

        <ImageView
            android:id="@+id/imgCountry"
            android:layout_width="@dimen/cardImageSize"
            android:layout_height="@dimen/cardImageSize"
            android:layout_marginStart="@dimen/cardTextMTop"
            android:layout_marginTop="@dimen/cardTextMTop"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flags" />

        <TextView
            android:id="@+id/txtCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardTextMTop"
            android:textSize="@dimen/cardTextSize20"
            android:textStyle="bold"
            android:textColor="@color/countryColor"
            app:layout_constraintBottom_toBottomOf="@+id/imgCountry"
            app:layout_constraintStart_toEndOf="@+id/imgCountry"
            app:layout_constraintTop_toTopOf="@+id/imgCountry"
            tools:text="@string/countryName" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/cardImageSize"
            android:layout_height="@dimen/cardImageSize"
            android:layout_marginTop="@dimen/cardTextMTop"
            android:layout_marginBottom="@dimen/cardTextMTop20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgCountry"
            app:layout_constraintTop_toBottomOf="@+id/imgCountry"
            app:srcCompat="@drawable/testtube" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/cardImageSize"
            android:layout_height="@dimen/cardImageSize"
            android:layout_marginStart="@dimen/cardTextMTop20"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/mask" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/cardImageSize"
            android:layout_height="@dimen/cardImageSize"
            android:layout_marginStart="@dimen/cardTextMTop20"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/angel" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardTextMTop"
            android:text="@string/totalTest"
            android:textSize="@dimen/cardTextSize12"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardTextMTop"
            android:text="@string/totalCases"
            android:textSize="@dimen/cardTextSize12"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardTextMTop"
            android:text="@string/totalDeaths"
            android:textSize="@dimen/cardTextSize12"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtTestNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardTextMTop2"
            android:textSize="@dimen/cardTextSize14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="@string/result" />

        <TextView
            android:id="@+id/txtCaseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardTextMTop2"
            android:textSize="@dimen/cardTextSize14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="@string/result" />

        <TextView
            android:id="@+id/txtDeathNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cardTextMTop2"
            android:textSize="@dimen/cardTextSize14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="@string/result" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>